--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -60,7 +60,7 @@
                                 <rect key="frame" x="7" y="5" width="306" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QTA-2K-tgO" customClass="FluxRadarView">
+                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QTA-2K-tgO" customClass="FluxCompassView">
                                         <rect key="frame" x="8" y="10" width="40" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -610,7 +610,6 @@
         <image name="btn-Annotation-save" width="270" height="100"/>
         <image name="camButton" width="80" height="80"/>
         <image name="clockIcon" width="23" height="24"/>
-        <image name="compassButton" width="100" height="100"/>
         <image name="detailButton" width="25" height="24"/>
         <image name="filterButton" width="80" height="80"/>
         <image name="filter_Events" width="40" height="40"/>
